--- a/SourceCode/EcartApp/ProjectE-Comerce Cart SystemSourceCodeprojectLog.html
+++ b/SourceCode/EcartApp/ProjectE-Comerce Cart SystemSourceCodeprojectLog.html
@@ -4623,4 +4623,56 @@ Log session start time Sat Dec 28 12:15:21 IST 2024<br>
 </tr>
 </table>
 <br>
-</body></html>
+</body></html><!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Log4J Log Messages</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Sat Dec 28 12:15:21 IST 2024<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>54075</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="repository.DBConfig category">repository.DBConfig</td>
+<td title="Message">addProductToCart method is called</td>
+</tr>
+
+<tr>
+<td>54076</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="repository.DBConfig category">repository.DBConfig</td>
+<td title="Message">isProductPresentById method is called</td>
+</tr>
+
+<tr>
+<td>54077</td>
+<td title="main thread">main</td>
+<td title="Level"><font color="#993300"><strong>ERROR</strong></font></td>
+<td title="repository.DBConfig category">repository.DBConfig</td>
+<td title="Message">Error in isProductPresentById method, </td>
+</tr>
+<tr><td bgcolor="#993300" style="color:White; font-size : xx-small;" colspan="6">java.lang.NullPointerException
+<br>&nbsp;&nbsp;&nbsp;&nbsp;	at repository.CartRepositoryImpl.isProductPresentById(CartRepositoryImpl.java:25)
+<br>&nbsp;&nbsp;&nbsp;&nbsp;	at repository.CartRepositoryImpl.addProductToCart(CartRepositoryImpl.java:104)
+<br>&nbsp;&nbsp;&nbsp;&nbsp;	at service.CartServiceImpl.addProductToCart(CartServiceImpl.java:11)
+<br>&nbsp;&nbsp;&nbsp;&nbsp;	at client.EcartApplication.main(EcartApplication.java:275)
+</td></tr>
